public_html/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: app-ingress
 namespace: app
spec:
 rules:
 - host: app.saikrish.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: app-svc
         servicePort: 80
